CREATE TABLE `calendar` (
  `id` integer PRIMARY KEY NOT NULL,
  `plannedTime` integer,
  `startTime` integer,
  `endTime` integer,
  `duration` integer NOT NULL,
  `mode` text,
  `completedWorkoutId` text,
  `opportunity_id` text,
  `opportunity_title` text,
  `opportunity_subtitle` text,
  `opportunity_description` text,
  `opportunity_coverImageUrl` text,
  `opportunity_type` text,
  `opportunity_difficulty` text,
  `opportunity_duration` integer,
  `opportunity_location` text,
  `opportunity_startTime` integer,
  `opportunity_endTime` integer,
  `opportunity_containsRun` integer,
  `opportunity_showLabel` integer,
  `opportunity_label` text,
  `opportunity_isNew` integer,
  `opportunity_url` text,
  `opportunity_trainer_id` text,
  `opportunity_trainer_name` text,
  `opportunity_trainer_profileImageUrl` text,
  `opportunity_trainer_location` text,
  `opportunity_trainer_following` integer,
  `opportunity_trainer_followers` integer,
  `opportunity_trainer_state` text,
  `opportunity_trainer_about` text,
  `opportunity_trainer_instagramImageUrls` text,
  `opportunity_goal_id` text,
  `opportunity_goal_name` text,
  `opportunity_goal_selected` integer,
  `opportunity_goal_description` text
);

CREATE TABLE `completed_exercises` (
  `id` text PRIMARY KEY NOT NULL,
  `exerciseId` text,
  `startTime` integer,
  `endTime` integer,
  `duration` real NOT NULL,
  `score` integer NOT NULL,
  `calories` integer,
  `completedWorkoutId` text,
  `city` text,
  `country` text,
  `distanceInMeters` real,
  `distance` real,
  `maxAltitude` real,
  `minAltitude` real,
  `meanAltitude` real,
  `maxSpeed` real,
  `meanSpeed` real,
  `averageTimePerKm` real,
  `steps` integer,
  `userCreated` integer NOT NULL,
  `modifiedAt` integer,
  `startTimeModified` integer,
  `endTimeModified` integer,
  `distanceModified` real,
  `distanceInMetersModified` real,
  `durationModified` real,
  `caloriesModified` integer,
  `meanSpeedModified` real,
  `averageTimePerKmModified` real,
  `mode` text,
  `runLocationType` text,
  `modeModified` text,
  `runLocationTypeModified` text,
  `currentPace` real NOT NULL,
  `oldDistance` real NOT NULL,
  `isRun` integer NOT NULL,
  `last_position_lat` real,
  `last_position_lng` real
);

CREATE TABLE `completed_workouts` (
  `id` text PRIMARY KEY NOT NULL,
  `workoutId` text,
  `startTime` integer NOT NULL,
  `duration` real NOT NULL,
  `score` integer NOT NULL,
  `calories` integer,
  `endTime` integer,
  `isFinished` integer NOT NULL,
  `isSynced` integer NOT NULL,
  `mode` text,
  `scheduledWorkoutId` text,
  `userCreated` integer NOT NULL,
  `modifiedAt` integer,
  `modeModified` text,
  `startTimeModified` integer,
  `endTimeModified` integer,
  `durationModified` real,
  `distanceModified` real,
  `caloriesModified` integer,
  `groupId` text,
  `isConfirmedForSync` integer,
  `workout_minClientVersion` text,
  `workout_introVideoUrl` text,
  `workout_favourited` integer,
  `workout_date` integer,
  `workout_tracScore` integer,
  `workout_streaming` integer,
  `workout_infotextTitle` text,
  `workout_bottomActionEndtext` text,
  `workout_id` text,
  `workout_title` text,
  `workout_subtitle` text,
  `workout_description` text,
  `workout_coverImageUrl` text,
  `workout_type` text,
  `workout_difficulty` text,
  `workout_duration` integer,
  `workout_location` text,
  `workout_startTime` integer,
  `workout_endTime` integer,
  `workout_containsRun` integer,
  `workout_showLabel` integer,
  `workout_label` text,
  `workout_isNew` integer,
  `workout_url` text,
  `workout_trainer_id` text,
  `workout_trainer_name` text,
  `workout_trainer_profileImageUrl` text,
  `workout_trainer_location` text,
  `workout_trainer_following` integer,
  `workout_trainer_followers` integer,
  `workout_trainer_state` text,
  `workout_trainer_about` text,
  `workout_trainer_instagramImageUrls` text,
  `workout_goal_id` text,
  `workout_goal_name` text,
  `workout_goal_selected` integer,
  `workout_goal_description` text,
  `opportunity_id` text,
  `opportunity_title` text,
  `opportunity_subtitle` text,
  `opportunity_description` text,
  `opportunity_coverImageUrl` text,
  `opportunity_type` text,
  `opportunity_difficulty` text,
  `opportunity_duration` integer,
  `opportunity_location` text,
  `opportunity_startTime` integer,
  `opportunity_endTime` integer,
  `opportunity_containsRun` integer,
  `opportunity_showLabel` integer,
  `opportunity_label` text,
  `opportunity_isNew` integer,
  `opportunity_url` text,
  `opportunity_trainer_id` text,
  `opportunity_trainer_name` text,
  `opportunity_trainer_profileImageUrl` text,
  `opportunity_trainer_location` text,
  `opportunity_trainer_following` integer,
  `opportunity_trainer_followers` integer,
  `opportunity_trainer_state` text,
  `opportunity_trainer_about` text,
  `opportunity_trainer_instagramImageUrls` text,
  `opportunity_goal_id` text,
  `opportunity_goal_name` text,
  `opportunity_goal_selected` integer,
  `opportunity_goal_description` text
);

CREATE TABLE `positions` (
  `id` text PRIMARY KEY NOT NULL,
  `lat` real NOT NULL,
  `lng` real NOT NULL,
  `speed` real NOT NULL,
  `height` real NOT NULL,
  `accuracyX` real NOT NULL,
  `accuracyY` real,
  `timestamp` integer NOT NULL,
  `isPaused` integer,
  `completedExerciseId` text
);

CREATE TABLE `heart_beats` (
  `id` text PRIMARY KEY NOT NULL,
  `heartbeat` real NOT NULL,
  `timestamp` integer NOT NULL,
  `isPaused` integer,
  `completedExerciseId` text
);

ALTER TABLE `completed_workouts` ADD FOREIGN KEY (`id`) REFERENCES `calendar` (`completedWorkoutId`);

ALTER TABLE `completed_exercises` ADD FOREIGN KEY (`completedWorkoutId`) REFERENCES `completed_workouts` (`id`);

ALTER TABLE `completed_exercises` ADD FOREIGN KEY (`id`) REFERENCES `positions` (`completedExerciseId`);

ALTER TABLE `completed_exercises` ADD FOREIGN KEY (`id`) REFERENCES `heart_beats` (`completedExerciseId`);
